--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="paragraphs">
 <h2 id="SkywindFrankSinatra">What is Skywind?</h2>
-    <p>Skywind started as a passion project in 2011 when Skyrim first came out when 
+    <p>Skywind started as a passion project in 2011, when Skyrim first came out, when 
     fans of the old Morrowind game wanted to port Morrowind over to the Skyrim engine.
     Although it was eventually decided to do a complete remake of Morrowind in the 
     Skyrim engine. Work on the remake continued slowly for five years until the 
